# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

# Platform modules
add_subdirectory(project)
# Core modules
add_subdirectory(arguments)
# Application module
add_subdirectory(main)