# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

# Platform modules
add_subdirectory(project)
add_subdirectory(image)
add_subdirectory(util)
# Core modules
add_subdirectory(format)
add_subdirectory(arguments)
add_subdirectory(dds)
add_subdirectory(png)
add_subdirectory(pipeline)
add_subdirectory(regex)
add_subdirectory(resize)
add_subdirectory(task)
# Application module
add_subdirectory(main)
